--- a/SearchDeclarations/Pages/Index.cshtml
+++ b/SearchDeclarations/Pages/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Pagina de inicio";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenido al CNBS</h1>
+    <img src="/img/L05-Con-Escudo-Gris-y-Turquesa.png" alt="Alternate Text" />
 </div>
